<?xml version="1.0" encoding="utf-8"?>
<remote-actions version="1.2">
    <action
        id="click"
        label="@string/click"
        priority="1"
        trigger_key="SPACE">
        <preference name="gesture" value="click"/>
        <preference name="button_only" value="true"/>
    </action>
    <action
        id="double_click"
        label="@string/double_click"
        priority="2"
        trigger_key="ENTER">
        <preference name="gesture" value="double_click"/>
        <preference name="button_only" value="true"/>
    </action>
    <action
        id="swipe_left"
        label="@string/swipe_left"
        priority="3"
        trigger_key="DPAD_LEFT">
        <preference name="gesture" value="swipe_left"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="swipe_right"
        label="@string/swipe_right"
        priority="4"
        trigger_key="DPAD_RIGHT">
        <preference name="gesture" value="swipe_right"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="swipe_up"
        label="@string/swipe_up"
        priority="5"
        trigger_key="DPAD_UP">
        <preference name="gesture" value="swipe_up"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="swipe_down"
        label="@string/swipe_down"
        priority="6"
        trigger_key="DPAD_DOWN">
        <preference name="gesture" value="swipe_down"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="circle_cw"
        label="@string/circle_cw"
        priority="7"
        trigger_key="PAGE_DOWN">
        <preference name="gesture" value="circle_cw"/>
        <preference name="motion_only" value="true"/>
    </action>
    <action
        id="circle_ccw"
        label="@string/circle_ccw"
        priority="8"
        trigger_key="PAGE_UP">
        <preference name="gesture" value="circle_ccw"/>
        <preference name="motion_only" value="true"/>
    </action>
</remote-actions>
